Chevron direction now based on flow property. Fixed chevron alignment.

--- a/src/ui-layout.css
+++ b/src/ui-layout.css
@@ -13,7 +13,14 @@
 }
 
 .ui-splitbar{
-  display: block;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  -webkit-justify-content: center;
+  justify-content: center;
+
   background-color: #ffffff;
   right: auto;
   position: absolute;
@@ -23,13 +30,19 @@
 .ui-layout-row > .ui-splitbar{
   height: 8px; width: 100%;
   cursor: row-resize;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 .ui-layout-column > .ui-splitbar{
   width: 8px; height: 100%;
   cursor: col-resize;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
 
 .ui-layout-column > .ui-splitbar > a,
 .ui-layout-row > .ui-splitbar > a {
   cursor: pointer;
+  font-size: 9px;
 }
